syntax = "proto3";

package monitor;

service SystemMonitor {
    rpc ReportMetrics (MetricsRequest) returns (MetricsResponse);
    rpc GetSystemInfo (SystemInfoRequest) returns (SystemInfoResponse);
    rpc ReportSystemctl (SystemctlRequest) returns (SystemctlResponse);
}

message SystemInfoRequest {
    string hostname = 1;
    string os = 2;
    uint64 uptime_seconds = 3;
    string kernel_version = 4;
    string cpu_model = 5;
    uint32 cpu_count = 6;
}

message MetricsRequest {
    CpuStats cpu_stats = 8;
    MemoryStats memory_stats = 9;
    repeated DiskStats disk_stats = 10;
    repeated Component components = 11;
    NetworkStats network_stats = 12;
    LoadAverage load_average = 13;
}
message SystemctlRequest {
    repeated SystemService services = 1;
}
message SystemService {
    string service_name = 1;
    string description = 2;
    uint64 pid = 3;
    string state = 4;
    string cpu = 5;
    string memory = 6;
}

message SystemctlResponse {
    string status = 1;
    string message = 2;
}

message CpuStats {
    double usage_percent = 1;
}

message MemoryStats {
    uint64 total_kb = 1;
    uint64 used_kb = 2;
    uint64 free_kb = 3;
}

message DiskStats {
    string name = 1;
    int32 total_space = 2;
    int32 used_space = 3;
    string unit = 4;
    double read_bytes = 5;
    double write_bytes = 6;
    string mount_point = 7;
}

message LoadAverage {
    double one_minute = 1;
    double five_minutes = 2;
    double fifteen_minutes = 3;
}

message NetworkStats {
    uint64 in = 1;
    uint64 out = 2;
}

message Component {
    string label = 1;
    float temperature = 2;
}

message MetricsResponse {
    string status = 1;
    string message = 2;
}

message SystemInfoResponse {
    string status = 1;
    string message = 2;

}
